# pyproject.toml
[project]
name = "unit-analysis"
version = "1.0.0"
description = "Game Unit Statistics Analysis"
requires-python = ">=3.8"

dependencies = [
    "duckdb>=0.9.0",           # SQL Analytics Engine
    "pandas>=1.5.0",           # Data manipulation
    "numpy>=1.21.0",           # Numerical computing
]

[project.optional-dependencies]
extras = [
    "matplotlib>=3.5.0",       # Plotting (optional)
    "seaborn>=0.11.0",         # Statistical visualization (optional)
]